---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 8 February 2020
  Features:
    - Added setting to customise power poles' maximum consumptions
    - Added support for modded poles from AAI Industry, Bob's Power, and Cargo Ships (more can be added upon request)
  Changes:
    - Reverted electric pole names back to their vanilla names
  Bugfixes:
    - Fixed crash when adding this mod to a save that it has been previously loaded with
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 4 February 2020
  Features:
    - Initial release
    - Tier 4 power poles with very long range and high maximum power but no supply area
    - Transformers which can separate electrical networks
    - All power poles have a maximum consumption, above which they may explode