@@ -1,6 +1,6 @@
 {
     "name": "PowerOverload",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "title": "Power Overload",
     "author": "Xorimuth",
     "description": "Performant, semi-realistic power distribution overhaul.\nPower poles can explode if the total electrical consumption on the network is too high. Use transformers to separate networks so that subnetworks do not take more power than they can handle.",
